# scorep_plugin_hwmongh

./: .gitmodules  CMakeLists.txt  README.md
src/: hwmongh.cpp
